Horizontal scroll ug fix

--- a/gui/css/styles.css
+++ b/gui/css/styles.css
@@ -38,7 +38,7 @@ p {
 }
 
 .titlebar {
-    width: 110%;
+    width: 100%;
     height: 20pt;
     background-color: transparent;
     margin: -5pt;
